2007-05-16  J. Tang  <jtang@tresys.com>

	* Right-clicking an apol results display now pops up a menu, that
	allows the user to copy and to select all.

	* libapol/swig/apol.i: Within the SWIG interfaces, there now
	exists an object "apol_ip_t", that represents both an IP address
	and a protocol.  apol_str_to_internal_ip() returns an apol_ip_t,
	which may then be used when setting an apol_nodecon_query_t.  Note
	that this only affects the SWIG generated libraries, not the
	original libapol.

	* SETools now requires a C99 compliant C compiler.  The supplied
	configure script will check for a working C99 compiler.

2007-05-16  M. Goldman  <mgoldman@tresys.com>
	* modified libpoldiff to support partial diffing of avrules

	* modified sediff to expose partial diffing of avrules functionality

2007-05-15  J. Tang  <jtang@tresys.com>

	* libqpol/src/mls_query.c (qpol_level_get_alias_iter): Fixed
	possible error when getting a level's alias iterator, where the
	first element returned might be the original level instead of one
	of its alias.

	* libapol/include/apol/policy-path.h, libapol/include/apol/util.h:
	Headers errantly included <config.h>.

	* libapol/src/netcon-query.c (apol_nodecon_query_set_proto)
	(apol_portcon_query_set_proto): These have been renamed to
	apol_nodecon_query_set_protocol() and
	apol_portcon_query_set_protocol() respectively.

	* libapol/src/util.c (apol_str_to_protocol): Added this function,
	to complement existing apol_protocol_to_str().

	* libapol/src/mls-query.c (apol_mls_range_contain_subrange): Fixed
	potential segfault if a range's high level is not yet set when
	comparison occurs.

2007-05-14  J. Mowery  <jmowery@tresys.com>

	* correctly marked libqpol defines for genfscon object classes
	  and fs_use behaviors as unsigned constants.

2007-05-14  J. Tang  <jtang@tresys.com>

	* libapol/src/role-query.c (apol_role_get_by_query),
	libapol/src/user-query.c (apol_user_get_by_query): Extra logic